Bug 424259 - plasmashell produces a lot of warnings in the journal
Summary: plasmashell produces a lot of warnings in the journal
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.19.2
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: David Edmundson
URL:
Keywords:
: 425051 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-07-15 20:31 UTC by Thiago Macieira
Modified: 2022-07-06 07:16 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thiago Macieira 2020-07-15 20:31:21 UTC
SUMMARY
There are a LOT of warnings in the log:

[320269.615587] plasmashell[2176]: file:///usr/share/plasma/plasmoids/org.kde.plasma.taskmanager/contents/ui/Task.qml:285:5: QML Connections: Implicitly defined onFoo properties in Connections are deprecated. Use this syntax instead: function onFoo(<arguments>) { ... }
[320407.541390] plasmashell[2176]: file:///usr/lib64/qt5/qml/QtQuick/Controls/Styles/Plasma/ScrollViewStyle.qml:60:5: QML Connections: Implicitly defined onFoo properties in Connections are deprecated. Use this syntax instead: function onFoo(<arguments>) { ... }
[320407.552092] plasmashell[2176]: file:///usr/lib64/qt5/qml/QtQuick/Controls/Styles/Plasma/ToolButtonStyle.qml:209:13: QML Connections: Implicitly defined onFoo properties in Connections are deprecated. Use this syntax instead: function onFoo(<arguments>) { ... }
[320407.556901] plasmashell[2176]: file:///usr/lib64/qt5/qml/QtQuick/Controls/Styles/Plasma/ToolButtonStyle.qml:209:13: QML Connections: Implicitly defined onFoo properties in Connections are deprecated. Use this syntax instead: function onFoo(<arguments>) { ... }
[320407.559680] plasmashell[2176]: file:///usr/lib64/qt5/qml/QtQuick/Controls/Styles/Plasma/ToolButtonStyle.qml:209:13: QML Connections: Implicitly defined onFoo properties in Connections are deprecated. Use this syntax instead: function onFoo(<arguments>) { ... }
[320407.560003] plasmashell[2176]: file:///usr/share/plasma/plasmoids/org.kde.plasma.notifications/contents/ui/NotificationHeader.qml:78:5: QML Connections: Implicitly defined onFoo properties in Connections are deprecated. Use this syntax instead: function onFoo(<arguments>) { ... }
[320817.541187] plasmashell[2176]: file:///usr/share/plasma/plasmoids/org.kde.plasma.taskmanager/contents/ui/Task.qml:285:5: QML Connections: Implicitly defined onFoo properties in Connections are deprecated. Use this syntax instead: function onFoo(<arguments>) { ... }
[320817.577108] plasmashell[2176]: file:///usr/share/plasma/plasmoids/org.kde.plasma.taskmanager/contents/ui/Task.qml:285:5: QML Connections: Implicitly defined onFoo properties in Connections are deprecated. Use this syntax instead: function onFoo(<arguments>) { ... }
[320817.604298] plasmashell[2176]: file:///usr/share/plasma/plasmoids/org.kde.plasma.taskmanager/contents/ui/Task.qml:285:5: QML Connections: Implicitly defined onFoo properties in Connections are deprecated. Use this syntax instead: function onFoo(<arguments>) { ... }
[320817.639130] plasmashell[2176]: file:///usr/share/plasma/plasmoids/org.kde.plasma.taskmanager/contents/ui/Task.qml:285:5: QML Connections: Implicitly defined onFoo properties in Connections are deprecated. Use this syntax instead: function onFoo(<arguments>) { ... }
[320817.661544] plasmashell[2176]: file:///usr/share/plasma/plasmoids/org.kde.plasma.taskmanager/contents/ui/Task.qml:285:5: QML Connections: Implicitly defined onFoo properties in Connections are deprecated. Use this syntax instead: function onFoo(<arguments>) { ... }
[320853.312257] plasmashell[2176]: file:///usr/lib64/qt5/qml/QtQuick/Controls/Styles/Plasma/BusyIndicatorStyle.qml:39:9: QML Connections: Implicitly defined onFoo properties in Connections are deprecated. Use this syntax instead: function onFoo(<arguments>) { ... }
[320853.313665] plasmashell[2176]: file:///usr/share/plasma/plasmoids/org.kde.plasma.taskmanager/contents/ui/Task.qml:285:5: QML Connections: Implicitly defined onFoo properties in Connections are deprecated. Use this syntax instead: function onFoo(<arguments>) { ... }
[320854.194550] plasmashell[2176]: file:///usr/share/plasma/plasmoids/org.kde.plasma.taskmanager/contents/ui/Task.qml:285:5: QML Connections: Implicitly defined onFoo properties in Connections are deprecated. Use this syntax instead: function onFoo(<arguments>) { ... }


STEPS TO REPRODUCE
1. Start Plasmashell

OBSERVED RESULT
Warnings are logged.

EXPECTED RESULT
No warnings are logged.

SOFTWARE/OS VERSIONS
openSUSE Tumbleweed 20200701
Qt: 5.15.0
KDE Frameworks: 5.71.0
kf5-config: 1.0
Comment 1 David Edmundson 2020-07-15 22:10:03 UTC
Yeah...but we're stuck on how to nicely fix this, maybe you'll have some ideas.

[320853.312257] plasmashell[2176]: file:///usr/lib64/qt5/qml/QtQuick/Controls/Styles/Plasma/BusyIndicatorStyle.qml:39:9: 

This is in frameworks, KDE frameworks has to support Qt 5.12
Qt 5.12 doesn't support the new connection syntax.

We can't port the code, it'd break
We can't just add an #ifdef as it's QML (well, not without some external pre-processing)


I did add a faux Qt logging category so one can turn them off.

My initial intention was I would just make Plasma ship an environment variable with that set, but it turns out that breaks other people's custom Qt logging rule files so I wasn't able to ship it. You have this as an option for yourself.

Maybe I could maybe add QLoggingCategory::installFilter() into every applicable app?
Comment 2 Bug Janitor Service 2020-07-15 22:48:27 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/156
Comment 3 Thiago Macieira 2020-07-16 00:07:57 UTC
(In reply to David Edmundson from comment #1)
> This is in frameworks, KDE frameworks has to support Qt 5.12
> Qt 5.12 doesn't support the new connection syntax.
> 
> We can't port the code, it'd break
> We can't just add an #ifdef as it's QML (well, not without some external
> pre-processing)

Then please report this on the Qt bug tracker against QML. QML knows which version of things you imported, so it shouldn't warn about things you can't use in that version.

Or any other solution the QML developers feel you should use.

As a user, I don't care how this is solved. So long as it's solved. (cc me in the bug report or paste the link here so I can say so).

> I did add a faux Qt logging category so one can turn them off.
> 
> My initial intention was I would just make Plasma ship an environment
> variable with that set, but it turns out that breaks other people's custom
> Qt logging rule files so I wasn't able to ship it. You have this as an
> option for yourself.
> 
> Maybe I could maybe add QLoggingCategory::installFilter() into every
> applicable app?

Unclean solutions. But since we need to put up with existing releases of Qt, that might be needed.
Comment 4 Aleix Pol 2020-08-06 10:57:37 UTC
Git commit 5aebd1a8c122a30f950582832ab3d6cf1bc978f7 by Aleix Pol Gonzalez, on behalf of David Edmundson.
Committed on 06/08/2020 at 10:56.
Pushed by davidedmundson into branch 'master'.

Fitler out annoying QML warnings

Qt 5.15 introduces a new syntax for connections.

Framework code can't port away due to having to support Qt5.12 which
does not include the new syntax.

This filters out the category.

We should remove this once we depend on Qt5.15 in frameworks.

M  +18   -0    shell/main.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/5aebd1a8c122a30f950582832ab3d6cf1bc978f7
Comment 5 David Edmundson 2020-08-06 14:15:21 UTC
*** Bug 425051 has been marked as a duplicate of this bug. ***
Comment 6 Aurélien Oudelet (auroud85_fr) 2020-08-06 14:29:04 UTC
Nice,
It will be for Plasma 5.19.5? Or 5.20 version of Plasmashell?
Comment 7 Aurélien Oudelet (auroud85_fr) 2020-08-06 14:36:52 UTC
What about:
plasmashell [4788]: qt.qpa.xcb: QXcbConnection: XCB error: 2 (BadValue), sequence: 43244, resource id: 56623518, major code: 141 (Unknown), minor code: 3

Does these warning be catched by your commit?
Comment 8 David Edmundson 2020-08-06 15:01:45 UTC
No
Comment 9 Aurélien Oudelet (auroud85_fr) 2020-08-06 15:03:12 UTC
OK, so I will open a bug.
Comment 10 Ahmad Samir 2020-09-01 13:49:52 UTC
FTR, reading the MR, for the fix to take effect one needs to be running Qt 5.15.1.