Fitler out annoying QML warnings

Qt 5.15 introduces a new syntax for connections.

Framework code can't port away due to having to support Qt5.12 which
does not include the new syntax.

This filters out the category.

We should remove this once we depend on Qt5.15 in frameworks.

BUG: 424259


(cherry picked from commit 5aebd1a8c122a30f950582832ab3d6cf1bc978f7)